Add chinese colors speaker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="ready_to_play">I\'m ready to play!</string>
     <string name="action_lights_color">Control the lights!</string>
     <string name="action_control_fan">Control the fan!</string>
-    <string name="action_learn_colors">Learn colors in Chinese</string>
+    <string name="action_learn_colors">Learn colors in Chinese!</string>
     <string name="action_nursery_rhymes">Nursery rhymes!</string>
     <string name="action_google_assistant">And here\'s the Google Assistant!</string>
     <string name="action_parents_mode">Parents mode!</string>
