--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_lights_color">Control the lights!</string>
     <string name="action_control_fan">Control the fan!</string>
     <string name="action_learn_colors">Learn colors in Chinese!</string>
-    <string name="action_nursery_rhymes">Nursery rhymes!</string>
-    <string name="action_google_assistant">And here\'s the Google Assistant!</string>
+    <string name="action_nursery_rhymes">Play some music!</string>
+    <string name="action_google_assistant">Talk to the Google Assistant!</string>
     <string name="action_parents_mode">Parents mode!</string>
 </resources>
